# pet-projects

./: .gitignore
match-find-assignment/: CMakeLists.txt  build.bat  configure.bat  test.bat
match-find-assignment/matchfind/: main.cpp
match-find-assignment/matchfind/src/: Helpers.cpp  Helpers.h  MatchFinder.cpp  MatchFinder.h
match-find-assignment/unitTests/: CmakeLists.txt  UnitTests.cpp
match-find-assignment/unitTests/testStuff/: input1.txt  output1.txt
thread-pool-lib/: CMakeLists.txt  configure.bat
thread-pool-lib/threadPool/: CMakeLists.txt
thread-pool-lib/threadPool/include/: ThreadPool.h
thread-pool-lib/threadPool/src/: ThreadPool.cpp
thread-pool-lib/unitTests/: CMakeLists.txt  testThreadPool.cpp
